Modification contact with number and header

--- a/style.css
+++ b/style.css
@@ -848,7 +848,35 @@ h4 {
     background-image: url("img/image-de-presentation.jpg");
 }
 
+.call_us {
+    width: 47%;
+    margin-left: 18px;
+    height: 410px;
+    border: solid 0.3em white;
+    border-left-color: #c27956;
+}
+
+.call_us_number {
+    font-size: 30px;
+    padding-top: 125px;
+    text-align: center;
+}
+
+.footer_contact_us {
+    width: 100%;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.footer_find_us {
+    width: 100%;
+    text-align: center;
+    padding-top: 50px;
+}
+
 #map {
+    margin-top: 50px;
+    margin-bottom: 50px;
     width: 100%;
     height: 400px;
 }
