--- a/style.css
+++ b/style.css
@@ -875,7 +875,7 @@ h4 {
 .footer_find_us {
     width: 100%;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 80px;
 }
 
 #map {
@@ -946,6 +946,12 @@ h4 {
         padding: 0 20px;
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
+    }
+    .call_us {
+        width: 100%;
+        margin-left: 18px;
+        height: 410px;
+        border: none;
     }
 }
 
