Return bootstrap V3 after error script

--- a/style.css
+++ b/style.css
@@ -885,6 +885,14 @@ h4 {
     height: 400px;
 }
 
+.padding-top {
+    padding-top: 0;
+}
+
+.margin_bottom {
+    margin-bottom: 50px;
+}
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
