--- a/style.css
+++ b/style.css
@@ -1176,6 +1176,6 @@ background-color: #F3976C;
 .nav-item:active{
     background: #F3976C!important;
     color: #000000!important;
-    font-style: bold;
+    font-weight: bold;
 }
 
